# Quantum-GIS

./: .cvsignore  CMakeLists.txt  acinclude.m4  configure.in  qgsconfig.h.in
branches/Lib_Refactoring-branch/: CMakeLists.txt  configure.in
branches/Lib_Refactoring-branch/cmake/: Bison.cmake  FindExpat.cmake  FindGDAL.cmake  FindGEOS.cmake  FindGSL.cmake  FindPostgres.cmake  FindProj.cmake  FindSqlite3.cmake
branches/Lib_Refactoring-branch/doc/: CMakeLists.txt
branches/Lib_Refactoring-branch/i18n/: CMakeLists.txt
branches/Lib_Refactoring-branch/python/: configure.py  qgisconfig.py.in  qgsdataprovider.sip  qgsgeometry.sip  qgsmaplayer.sip  qgsmaplayerregistry.sip  qgsmaprender.sip  qgsrasterdataprovider.sip  qgsrasterlayer.sip  qgsrenderer.sip  qgsvectordataprovider.sip
branches/Lib_Refactoring-branch/src/: CMakeLists.txt  Makefile.am
python/: CMakeLists.txt  configure.py  configure.py.in  core.sip  qgis.sip  qgsapplication.sip  qgsdataprovider.sip  qgsdatasourceuri.sip  qgsfeature.sip  qgsgeometry.sip  qgsgeometryvertexindex.sip  qgsmaplayer.sip  qgsrasterlayer.sip  qgsvectordataprovider.sip  qgsvectorlayer.sip
python/analysis/network/: qgsgraphdirector.sip
python/core/: core.sip  qgscontrastenhancement.sip  qgscontrastenhancementfunction.sip  qgsdataprovider.sip  qgsgeometry.sip  qgslabel.sip  qgsmaplayer.sip  qgspoint.sip  qgsrasterlayer.sip  qgsrenderer.sip  qgssinglesymbolrenderer.sip  qgssymbolrenderer.sip  qgsvectordataprovider.sip  qgsvectorlayer.sip
python/gui/: gui.sip  qgisinterface.sip  qgsmapcanvas.sip  qgsmaptool.sip  qgsrubberband.sip
python/plugins/fTools/: fTools.py
python/plugins/plugin_installer/: installer_gui.py
src/app/: CMakeLists.txt  Makefile.am  main.cpp  qgisapp.cpp  qgisapp.h  qgisappinterface.cpp  qgisappinterface.h  qgsattributedialog.cpp  qgsattributetable.cpp  qgsattributetable.h  qgsattributetabledisplay.cpp  qgsattributetabledisplay.h  qgsbookmarks.cpp  qgsclipboard.cpp  qgscontinuouscolordialog.cpp  qgsdbsourceselect.cpp  qgsdbsourceselect.h  qgsgraduatedsymboldialog.cpp  qgsmapoverviewcanvas.h  qgsmapserverexport.cpp  qgsmaptooladdfeature.cpp  qgsmaptooladdring.h  qgsmaptoolcapture.cpp  qgsmaptoolcapture.h  qgsmaptooledit.cpp  qgsmaptooledit.h  qgsmaptoolidentify.cpp  qgsmaptoolmovefeature.cpp  qgsmaptoolmovevertex.cpp  qgsmaptoolmovevertex.h  qgsmaptoolselect.cpp  qgsmaptoolvertexedit.cpp  qgsmaptoolvertexedit.h  qgsmeasure.cpp  qgsnewconnection.cpp  qgsnewconnection.h  qgsnewogrgenericconnection.cpp  qgsnewogrgenericconnection.h  qgsoptions.cpp  qgsoptions.h  (+21 more)
src/app/composer/: qgscomposer.cpp  qgscomposer.h  qgscomposeritem.cpp  qgscomposeritem.h  qgscomposeritemgroup.cpp  qgscomposeritemgroup.h  qgscomposeritemwidget.cpp  qgscomposerlabel.cpp  qgscomposerlabel.h  qgscomposerlabelwidget.cpp  qgscomposerlabelwidget.h  qgscomposerlegend.cpp  qgscomposerlegend.h  qgscomposerlegenditemdialog.h  qgscomposerlegendwidget.cpp  qgscomposerlegendwidget.h  qgscomposermap.cpp  qgscomposermap.h  qgscomposermapwidget.cpp  qgscomposermapwidget.h  qgscomposerpicture.cpp  qgscomposerpicture.h  qgscomposerpicturewidget.cpp  qgscomposerpicturewidget.h  qgscomposerscalebar.cpp  qgscomposerscalebar.h  qgscomposerscalebarwidget.cpp  qgscomposerscalebarwidget.h  qgscomposervectorlegend.cpp  qgscomposervectorlegend.h  qgscomposerview.cpp  qgscomposerview.h  qgscomposition.cpp  qgscomposition.h  qgscompositionwidget.cpp  qgscompositionwidget.h  qgsdoubleboxscalebarstyle.cpp  qgsdoubleboxscalebarstyle.h  qgsitempositiondialog.cpp  qgsitempositiondialog.h  (+14 more)
src/app/dbutilities/: qgsconnectionparameters.h  qgsconnectionregistry.cpp  qgsdatabaseconnection.h  qgsgeomcolumntypethread.cpp  qgsgeomcolumntypethread.h  qgsogrdatabaseconnection.cpp  qgsogrdatabaseconnection.h  qgspostgresdatabaseconnection.cpp  qgspostgresdatabaseconnection.h
src/app/legend/: qgslegend.cpp  qgslegend.h  qgslegendlayer.cpp  qgslegendlayerfile.cpp  qgslegendlayerfile.h  qgslegendlayerfilegroup.cpp
src/core/: CMakeLists.txt  Makefile.am  qgis.h  qgsapplication.cpp  qgsapplication.h  qgsattributeaction.cpp  qgscentralpointpositionmanager.cpp  qgscentralpointpositionmanager.h  qgsclipper.h  qgscoordinatetransform.cpp  qgscoordinatetransform.h  qgsdataprovider.h  qgsdatasourceuri.cpp  qgsdatasourceuri.h  qgsdistancearea.cpp  qgsdistancearea.h  qgsexception.h  qgsfeature.cpp  qgsfeature.h  qgsgeometry.cpp  qgsgeometry.h  qgsgeometryvertexindex.h  qgslabel.cpp  qgslabel.h  qgslabelattributes.h  qgsline.h  qgsmaplayer.cpp  qgsmaplayer.h  qgsmaplayerregistry.h  qgsmaprender.cpp  qgsmaprender.h  qgsmaprenderer.cpp  qgsmaprenderer.h  qgsmaptopixel.cpp  qgsmaptopixel.h  qgsmarkercatalogue.h  qgsmessageoutput.cpp  qgsmessageoutput.h  qgsoverlayobject.cpp  qgsoverlayobject.h  (+43 more)
src/core/composer/: qgscomposeritem.cpp  qgscomposeritem.h  qgscomposerlegend.cpp  qgscomposermap.cpp  qgscomposermap.h  qgscomposition.cpp  qgscomposition.h  qgspaperitem.cpp  qgspaperitem.h
src/core/dbutilities/: qgsconnectionmanager.cpp  qgsconnectionmanager.h  qgsogrdatabaseconnection.cpp  qgspostgresdatabaseconnection.cpp  qgsurimanager.cpp  qgsurimanager.h
src/core/pal/: feature.cpp  feature.h  geomfunction.cpp  geomfunction.h  hashtable.hpp  internalexception.h  label.cpp  label.h  labelposition.cpp  labelposition.h  layer.cpp  layer.h  linkedlist.hpp  pal.cpp  pal.h  palexception.h  palgeometry.h  palstat.cpp  palstat.h  pointset.cpp  pointset.h  priorityqueue.cpp  priorityqueue.h  problem.cpp  problem.h  rtree.hpp  simplemutex.h  util.cpp  util.h
src/core/raster/: qgscolorrampshader.h  qgscontrastenhancement.cpp  qgscontrastenhancement.h  qgscontrastenhancementfunction.h  qgsfreakoutshader.h  qgspseudocolorshader.cpp  qgsrasterlayer.cpp  qgsrasterlayer.h  qgsrasterpyramid.h  qgsrastershader.cpp  qgsrastershader.h  qgsrastershaderfunction.cpp  qgsrastershaderfunction.h  qgsrasterviewport.h
src/core/renderer/: qgscontinuouscolorrenderer.cpp  qgscontinuouscolorrenderer.h  qgsgraduatedsymbolrenderer.cpp  qgsgraduatedsymbolrenderer.h  qgsrenderer.h  qgsrenderitem.h  qgssinglesymbolrenderer.cpp  (+3 more)
(+1346 files in other folders)
